; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libnetbsd/extr_efun.c_estrlcat.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libnetbsd/extr_efun.c_estrlcat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENAMETOOLONG = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"Cannot append to string; %zu chars needed %zu provided\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @estrlcat(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i64 @strlcat(i8* %8, i8* %9, i64 %10)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp uge i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* @ENAMETOOLONG, align 4
  store i32 %15, i32* @errno, align 4
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @efunc(i32 1, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i64 %16, i64 %17)
  br label %19

19:                                               ; preds = %14, %3
  %20 = load i64, i64* %7, align 8
  ret i64 %20
}

declare dso_local i64 @strlcat(i8*, i8*, i64) #1

declare dso_local i32 @efunc(i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
